Make java 1.8 compatible